--- a/Arms+Shoulders.css
+++ b/Arms+Shoulders.css
@@ -24,6 +24,7 @@ body{
         margin: 0 40px;
         padding: 20px;
         text-transform: uppercase;
+        /*Vincent taought me this*/
     }
 
     .stylist ul li a{
